# RP2040_Bootloader

./: .gitignore  .gitmodules  Features.md  README.md  build.sh  setup.sh
Bootloader/: CMakeLists.txt
Bootloader/include/: Interface.h
Bootloader/include/Interface/: Interface.h  UART.h
Bootloader/include/Interface/CDC/: CDC.h
Bootloader/include/Interface/UART/: UART.h
Bootloader/src/: CMakeLists.txt  Interface.cpp  main.cpp  main_old.cpp
Bootloader/src/Interface/: CMakeLists.txt  Interface.cpp  UART.cpp
Bootloader/src/Interface/CDC/: CDC.cpp  CMakeLists.txt
Bootloader/src/Interface/UART/: CMakeLists.txt  UART.cpp
linker_scripts/: memmap_blocked_ram.ld  memmap_copy_to_ram.ld  memmap_default.ld
